src/tests/snapshots/cargo_vet__tests__import__peer_audits_exemption_minimize.snap
---
source: src/tests/import.rs
expression: output
---
audits.toml: (unchanged)
config.toml:
 
 # cargo-vet config file
 
 [imports.peer-company]
 url = "https://peercompany.co.uk"
 criteria-map = []
 
 [[exemptions.third-party1]]
 version = "10.0.0"
 criteria = "safe-to-deploy"
 
-[[exemptions.third-party2]]
-version = "10.0.0"
-criteria = "safe-to-deploy"
-
 [[exemptions.transitive-third-party1]]
 version = "10.0.0"
 criteria = "safe-to-deploy"
 

imports.lock:
 
 # cargo-vet imports lock
 
-[audits.peer-company.audits]
+[[audits.peer-company.audits.third-party2]]
+criteria = "safe-to-deploy"
+version = "10.0.0"
 


