src/tests/snapshots/cargo_vet__tests__import__peer_audits_exemption_minimize_none.snap
---
source: src/tests/import.rs
expression: output
---
audits.toml: (unchanged)
config.toml:
 
 # cargo-vet config file
 
 [imports.peer-company]
 url = "https://peercompany.co.uk"
 
 [[exemptions.third-party1]]
 version = "10.0.0"
 criteria = "safe-to-deploy"
 
 [[exemptions.third-party2]]
 version = "10.0.0"
 criteria = "safe-to-deploy"
-
-[[exemptions.transitive-third-party1]]
-version = "10.0.0"
-criteria = "safe-to-deploy"

imports.lock: (unchanged)

