src/tests/snapshots/cargo_vet__tests__import__peer_audits_exemption_minimize_vet.snap
---
source: src/tests/import.rs
expression: output
---
audits.toml: (unchanged)
config.toml: (unchanged)
imports.lock: (unchanged)

