src/tests/snapshots/cargo_vet__tests__import__peer_audits_import_exclusion.snap
---
source: src/tests/import.rs
expression: output
---
 
-[[audits.peer-company.audits.third-party1]]
-criteria = "safe-to-deploy"
-violation = "*"
-
-[[audits.peer-company.audits.third-party2]]
-criteria = "safe-to-deploy"
-version = "10.0.0"
-
 [[audits.peer-company.audits.transitive-third-party1]]
 criteria = "safe-to-deploy"
 version = "10.0.0"

