src/tests/snapshots/cargo_vet__tests__import__wildcard_audit_trustpub_import.snap
---
source: src/tests/import.rs
expression: output
---
+
+[[publisher.third-party2]]
+version = "10.0.0"
+when = "2022-12-18"
+trusted-publisher = "github:testing/third-party2"

